--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,6 @@ img {
     width: 100%;
     height: 100%;
 }
-.up {
-    transform: translateY(100px);
-    opacity: 0;
+/* .up {
     visibility: hidden;
-}
+} */
