--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ html {
 body {
     overflow-x: hidden;
     background: #ececec;
-    height: 2000px;
     font-family: 'Montserrat', sans-serif;
 }
 h1 {
@@ -23,7 +22,7 @@ h1 {
 }
 h4 {
     font-weight: 600;
-    font-size: 28px;
+    font-size: 24px;
     color: #666;
     line-height: 1.3;
     margin: 0;
@@ -42,7 +41,7 @@ p.top-titles {
     text-transform: uppercase;
 }
 .small-title {
-    font-size: 10px;
+    font-size: 9px;
     font-weight: 500;
     letter-spacing: .2em;
     text-transform: uppercase;
@@ -51,12 +50,15 @@ p.top-titles {
     text-decoration: none;
     border-bottom: 2px solid #b00f24;
     padding: 5px 0;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    letter-spacing: .5px;
 }
 
 section {
     height: 70vh;
     width: 100vw;
+    padding: 0 5rem;
+    visibility: hidden;
 }
 .d-grid {
     display: grid;
@@ -70,21 +72,40 @@ section {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-column: 1 / span 12;
+    margin: 10rem 0;
+    padding: 10rem 0;
 }
 .project-info {
     background: #fff;
     opacity: 0;
-    transform: translateX(-200px);
     padding: 20px 20px 30px;
+}
+.project-info.first {
+    transform: translateX(-200px);
+}
+
+.project-info.right.second {
+    transform: translateX(200px);
 }
 
 .project-left .box {
-    grid-column: 3/ span 5;
+    grid-column: 2/ span 4;
     grid-row: 1 / span 3;
     width: 100%;
 }
 .project-left .project-info {
-    grid-column: 2 / span 3;
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
+}
+
+.project-right .box {
+    grid-column: 8 / span 4;
+    grid-row: 1 / span 3;
+    width: 100%;
+}
+
+.project-right .project-info.right {
+    grid-column: 11 / span 2;
     grid-row: 2 / span 1;
 }
 
@@ -109,3 +130,9 @@ img {
 /* .up {
     visibility: hidden;
 } */
+footer {
+    width: 100%;
+    padding: 2rem;
+    text-align: center;
+    font-size: 10px;
+}
